--- a/assets/snippets/footer.html
+++ b/assets/snippets/footer.html
@@ -1,3 +1,3 @@
 <footer class="global-footer">
-  <p>Built by a wonderful developer for Asana.</p>
+  <p>Built by a <s>wonderful developer</s> Robert Chen for Asana.</p>
 </footer>
